--- a/navbar.html
+++ b/navbar.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
-  <title>Free Porn Videos &amp; Sex Movies - Porno, XXX, Porn Tube &#124; Pornhub</title>
+  <title>Navigation bar admin</title>
 </head>
 
 <body>
