--- a/navbar.html
+++ b/navbar.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
-  <title>Free Porn Videos &amp; Sex Movies - Porno, XXX, Porn Tube &#124; Pornhub</title>
+  <title>Quintessentiel</title>
 </head>
 
 <body>
@@ -43,7 +43,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Déconnexion</a>
+          <a class="nav-link" href="login.php">Connexion</a>
         </li>
       </ul>
     </div>
