Fixed pathing nav_admin & removed footer

--- a/nav_admin.html
+++ b/nav_admin.html
@@ -44,8 +44,9 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="myrecipes.php">Recettes</a>
             <a class="dropdown-item" href="gestionnaireinventaire.php">Inventaire</a>
-            <a class="dropdown-item" href="#">Commandes</a>
-            <a class="dropdown-item" href="#">Livraisons</a>
+            <a class="dropdown-item" href="order.php">Commandes</a>
+            <a class="dropdown-item" href="shipping.php">Livraisons</a>
+            <a class="dropdown-item" href="payment.php">Paiement</a>
           </div>
         </li>
         <li class="nav-item">
