--- a/nav_admin.html
+++ b/nav_admin.html
@@ -51,7 +51,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="login.php">Connexion</a>
+          <a class="nav-link" href="login.php">Connexion/Déconnexion</a>
         </li>
       </ul>
     </div>
