--- a/nav_inv.html
+++ b/nav_inv.html
@@ -36,7 +36,7 @@
           <a class="nav-link" href="catalog.php">Produits</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Connexion</a>
+          <a class="nav-link" href="login.php">Connexion/Déconnexion</a>
         </li>
       </ul>
     </div>
